tests/ui/traits/bad-method-typaram-kind.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/bad-method-typaram-kind.rs:2:13
   |
LL |     1.bar::<T>();
   |       ---   ^ `T` cannot be sent between threads safely
   |       |
   |       required by a bound introduced by this call
   |
note: required by a bound in `Bar::bar`
  --> $DIR/bad-method-typaram-kind.rs:6:14
   |
LL |     fn bar<T:Send>(&self);
   |              ^^^^ required by this bound in `Bar::bar`
help: consider further restricting type parameter `T` with trait `Send`
   |
LL | fn foo<T:'static + std::marker::Send>() {
   |                  +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
